More font and styles clean up

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 
         <div class="reveal" id="gdi">
 
-            <h3 class="uppercase gold">Intermediate JavaScript: Intro to Libraries + Frameworks</h3>
+            <h3 class="uppercase gold">Intermediate JavaScript</h3>
+            <h5>Intro to Libraries + Frameworks</h5>
 
             <div class="meta white uppercase small_meta">
                 Materials:
