cleaning up intro page

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         <div class="reveal" id="gdi">
 
             <h3 class="uppercase gold">Intermediate JavaScript</h3>
-            <h5>Intro to Libraries + Frameworks</h5>
+            <h5 class="white" style="margin-top:0px">Intro to Libraries + Frameworks</h5>
+            <img src="img/gdi_logo_badge.png" class="top_margin width_50" style="width:20%;">
 
-            <div class="meta white uppercase small_meta">
-                Materials:
-            </div>
+            <div class="spacer"></div>
 
             <div class="meta small_meta"><a class="blue" href="https://github.com/gdiminneapolis/intermediate-js/raw/master/intermediate-js-project-files.zip">Project Files</a></div>
             <div class="meta small_meta"><a class="blue" href="https://gdiminneapolis.github.io/intermediate-js/class-one.html">Day One Slides</a></div>
