Fixing slide 20 styling

--- a/class-one.html
+++ b/class-one.html
@@ -448,14 +448,14 @@
           <span class="inline_code">id</span>, we can use JavaScript's
           <span class="inline_code">document.getElementById()</span> function.
 
-          <div class="fragment" style="height:265px; float:left;">
-            <pre class="language-markup" style="width:395px;" data-src="src_samples/counter_dom.html"></pre>
-            <div style="clear:both;"></div>
+          <div class="fragment" style="height:150px;">
+            <pre class="language-markup" data-src="src_samples/counter_dom.html"></pre>
+            <!-- <div style="clear:both;"></div> -->
           </div>
 
-          <div class="fragment" style="height:265px; float:left;">
-            <pre class="language-markup" style="width:450px;padding:20px;padding-bottom:26px;" data-src="src_samples/counter_get_element_by_id.js"></pre>
-            <div style="clear:both;"></div>
+          <div class="fragment">
+            <pre class="language-markup" data-src="src_samples/counter_get_element_by_id.js"></pre>
+            <!-- <div style="clear:both;"></div> -->
           </div>
 
 
