Fixing a missing closing div tag

--- a/class-one.html
+++ b/class-one.html
@@ -83,7 +83,9 @@
         <h3 class="uppercase no_margin white">Expectations</h3>
         <div class="spacer big_spacer"></div>
 
-        <div class="fragment meta pink small_meta">Review <span class="fragment meta white tiny_meta">(today!)</span></div>
+        <div class="fragment meta pink small_meta">Review
+          <span class="fragment meta white tiny_meta">(today!)</span>
+        </div>
         <div class="spacer small_spacer"></div>
         <div class="fragment meta pink small_meta">Vanilla JavaScript is ugly</div>
         <div class="spacer small_spacer"></div>
@@ -443,22 +445,23 @@
         <div class="spacer big_spacer"></div>
         <div class="spacer big_spacer"></div>
 
-        <div class="fragment meta white small_meta">Since these
+        <div class="fragment meta white small_meta">
+          Since these
           <span class="gold">elements</span> are all accessible by an
           <span class="inline_code">id</span>, we can use JavaScript's
           <span class="inline_code">document.getElementById()</span> function.
-
-          <div class="fragment" style="height:150px;">
-            <pre class="language-markup" data-src="src_samples/counter_dom.html"></pre>
-            <!-- <div style="clear:both;"></div> -->
-          </div>
-
-          <div class="fragment">
-            <pre class="language-markup" data-src="src_samples/counter_get_element_by_id.js"></pre>
-            <!-- <div style="clear:both;"></div> -->
-          </div>
+        </div>
 
 
+        <div class="fragment" style="height:150px;">
+          <pre class="language-markup" data-src="src_samples/counter_dom.html"></pre>
+          <!-- <div style="clear:both;"></div> -->
+        </div>
+
+        <div class="fragment">
+          <pre class="language-markup" data-src="src_samples/counter_get_element_by_id.js"></pre>
+          <!-- <div style="clear:both;"></div> -->
+        </div>
 
       </section>
 
@@ -1058,15 +1061,15 @@
 
       </section>
 
-      </div>
-
-      <footer>
-        <div id="twitter">
-          @GDImpls &#8729; @amlyhamm &#8729; #learnJS &#8729; #gdi
-        </div>
-      </footer>
-
     </div>
+
+    <footer>
+      <div id="twitter">
+        @GDImpls &#8729; @amlyhamm &#8729; #learnJS &#8729; #gdi
+      </div>
+    </footer>
+
+  </div>
 
 </body>
 
