Fixing slide 20 styling

--- a/class-one.html
+++ b/class-one.html
@@ -453,12 +453,14 @@
         </div>
 
 
-        <div class="fragment" style="height:150px;">
+        <div class="fragment skinny_pre" style="height:150px;">
           <pre class="language-markup" data-src="src_samples/counter_dom.html"></pre>
           <!-- <div style="clear:both;"></div> -->
         </div>
 
-        <div class="fragment">
+        <div class="spacer"></div>
+
+        <div class="fragment skinny_pre">
           <pre class="language-markup" data-src="src_samples/counter_get_element_by_id.js"></pre>
           <!-- <div style="clear:both;"></div> -->
         </div>
