Adding the 'win' question to the welcome slide

--- a/class-one.html
+++ b/class-one.html
@@ -75,6 +75,9 @@
         <div class="spacer small_spacer"></div>
 
         <div class="fragment meta white small_meta">On a scale of 1 to "I could do this while sleeping" how comfortable are you with JavaScript and programming concepts?</div>
+        <div class="spacer small_spacer"></div>
+
+        <div class="fragment meta white small_meta">What's a recent "win" you've had?</div>
 
       </section>
 
