--- a/class-three.html
+++ b/class-three.html
@@ -41,10 +41,10 @@
         <div class="left_align" style="margin-top:-120px;">
           <div class="meta white big_meta uppercase tiny_meta">Wifi</div>
           <div class="meta gold tiny_meta">Network:
-            <span class="white">-</span>
+            <span class="white">training</span>
           </div>
           <div class="meta gold tiny_meta">Password:
-            <span class="white">-</span>
+            <span class="white">classroom</span>
           </div>
           <div class="meta gold tiny_meta">Slides:
             <span class="white">https://gdiminneapolis.github.io/intermediate-js/class-three.html</span>
